# LinuxProfile

./: .bashrc  .dir_colors  .p10k.zsh  .zshrc  CMakeLists.txt  clean.sh  createlink.sh  mode.sh  netrestart.sh  sources.list  sudoers  zsh.md
.ssh/: authorized_keys  id_rsa  id_rsa.pub
